--- a/Attempt2/src/gui/Commentaire.fxml
+++ b/Attempt2/src/gui/Commentaire.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="463.0" prefWidth="652.0" style="-fx-background-color: slategray;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.CommentaireController">
+<AnchorPane id="AnchorPane" prefHeight="463.0" prefWidth="652.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.CommentaireController">
    <children>
       <TextField fx:id="cmtntext" layoutX="38.0" layoutY="319.0" prefHeight="84.0" prefWidth="434.0" promptText="Votre commentaire..." />
       <Button fx:id="valider" contentDisplay="RIGHT" layoutX="15.0" layoutY="412.0" mnemonicParsing="false" onAction="#commenter" prefHeight="25.0" prefWidth="142.0" stylesheets="@style.css" text="commenter" />
@@ -34,8 +34,7 @@
             </GridPane>
          </content>
       </ScrollPane>
-      <Button fx:id="retbt" layoutX="31.0" layoutY="31.0" mnemonicParsing="false" onAction="#retour" prefHeight="25.0" prefWidth="81.0" stylesheets="@style.css" text="retour" />
-      <Label layoutX="38.0" layoutY="297.0" prefHeight="17.0" prefWidth="212.0" text="Tapez votre Commentaire:" textFill="WHITE">
+      <Label layoutX="38.0" layoutY="297.0" prefHeight="17.0" prefWidth="212.0" text="Tapez votre Commentaire:" textFill="#210777">
          <font>
             <Font name="Verdana Bold" size="12.0" />
          </font>
