--- a/Attempt2/src/gui/Edit.fxml
+++ b/Attempt2/src/gui/Edit.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -9,7 +10,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.EditController">
+<AnchorPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.EditController">
    <children>
       <ImageView fitHeight="600.0" fitWidth="800.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -91,20 +92,30 @@
                   <Image url="@user%20image.jpg" />
                </image>
             </ImageView>
-            <Button fx:id="delb" layoutX="26.0" layoutY="445.0" mnemonicParsing="false" onAction="#delete" prefHeight="25.0" prefWidth="300.0" style="-fx-background-color: #ee586e; -fx-background-radius: 10;" stylesheets="@style.css" text="Supprimer" textFill="WHITE">
+            <Button fx:id="delb" layoutX="25.0" layoutY="494.0" mnemonicParsing="false" onAction="#delete" prefHeight="25.0" prefWidth="300.0" style="-fx-background-color: #ee586e; -fx-background-radius: 10;" stylesheets="@style.css" text="Supprimer" textFill="WHITE">
                <font>
                   <Font name="Verdana Bold" size="24.0" />
                </font></Button>
-            <Button fx:id="modb" layoutX="427.0" layoutY="445.0" mnemonicParsing="false" onAction="#modifier" prefHeight="25.0" prefWidth="300.0" style="-fx-background-color: #ee586e; -fx-background-radius: 10;" stylesheets="@style.css" text="Modifier" textFill="WHITE">
+            <Button fx:id="modb" layoutX="426.0" layoutY="494.0" mnemonicParsing="false" onAction="#modifier" prefHeight="25.0" prefWidth="300.0" style="-fx-background-color: #ee586e; -fx-background-radius: 10;" stylesheets="@style.css" text="Modifier" textFill="WHITE">
                <font>
                   <Font name="Verdana Bold" size="24.0" />
                </font></Button>
-            <Line endX="598.0" layoutX="126.0" layoutY="309.0" startX="-100.0" stroke="#ee586e" strokeWidth="3.0" />
+            <Line endX="598.0" layoutX="126.0" layoutY="259.0" startX="-100.0" stroke="#ee586e" strokeWidth="3.0" />
             <ImageView fx:id="backbtn" fitHeight="51.0" fitWidth="58.0" layoutX="25.0" layoutY="12.0" onMouseClicked="#back" visible="false">
                <image>
                   <Image url="@GoBack.png" />
                </image>
             </ImageView>
+            <ImageView fx:id="goBackBtn" fitHeight="45.0" fitWidth="44.0" layoutX="14.0" layoutY="12.0" onMouseClicked="#goBackHandler" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@GoBack.png" />
+               </image>
+            </ImageView>
+            <ScrollPane layoutX="25.0" layoutY="275.0">
+               <content>
+                  <AnchorPane fx:id="ticketListPane" prefHeight="200.0" prefWidth="701.0" />
+               </content>
+            </ScrollPane>
          </children>
       </AnchorPane>
    </children>
