--- a/Attempt2/src/gui/EventInfo.fxml
+++ b/Attempt2/src/gui/EventInfo.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
+
 <ScrollPane fx:id="sPane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.EventInfoController">
    <content>
       <AnchorPane id="AnchorPane" prefHeight="700.0" prefWidth="1000.0" styleClass="Box">
@@ -20,15 +21,18 @@
             <Button fx:id="deleteBtn" layoutX="917.0" layoutY="125.0" mnemonicParsing="false" onAction="#deleteEvent" prefHeight="30.0" prefWidth="70.0" styleClass="GeneralButton" text="Supprimer">
                <font>
                   <Font name="Leelawadee UI Semilight" size="12.0" />
-               </font></Button>
+               </font>
+            </Button>
             <Button fx:id="updateBtn" layoutX="896.0" layoutY="72.0" mnemonicParsing="false" onAction="#updateEvent" prefHeight="30.0" prefWidth="90.0" styleClass="GeneralButton" text="Mettre à jour">
                <font>
                   <Font name="Leelawadee UI Semilight" size="12.0" />
-               </font></Button>
+               </font>
+            </Button>
             <Button fx:id="backBtn" layoutX="907.0" layoutY="14.0" mnemonicParsing="false" onAction="#goBackToList" prefHeight="40.0" prefWidth="80.0" styleClass="GeneralButton" text="Retourner">
                <font>
                   <Font name="Leelawadee UI Semilight" size="13.0" />
-               </font></Button>
+               </font>
+            </Button>
             <ImageView fx:id="afficheIv" fitHeight="323.0" fitWidth="574.0" layoutX="24.0" layoutY="27.0" pickOnBounds="true" preserveRatio="true" styleClass="Box" />
             <Text fx:id="titleText" layoutX="626.0" layoutY="86.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Title">
                <font>
@@ -115,6 +119,7 @@
                   <Font name="Leelawadee UI Semilight" size="12.0" />
                </font>
             </Button>
+            <AnchorPane fx:id="commentPane" layoutX="40.0" layoutY="513.0" prefHeight="187.0" prefWidth="930.0" />
          </children>
       </AnchorPane>
    </content>
