--- a/Attempt2/src/gui/MainContainer.fxml
+++ b/Attempt2/src/gui/MainContainer.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: #eaedee;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.MainContainerController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: #eaedee;" stylesheets="@../assets/css/app.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.MainContainerController">
    <children>
       <AnchorPane fx:id="navbarPane" layoutX="223.0" prefHeight="76.0" prefWidth="1057.0" style="-fx-background-color: 00FFFF;" />
       <AnchorPane fx:id="sidebarPane" prefHeight="800.0" prefWidth="223.0" />
