--- a/Attempt2/src/gui/StatUser.fxml
+++ b/Attempt2/src/gui/StatUser.fxml
@@ -4,10 +4,12 @@
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="566.0" prefWidth="747.0" style="-fx-background-color: #A05385;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.StatUserController">
+<AnchorPane id="AnchorPane" prefHeight="566.0" prefWidth="747.0" style="-fx-background-color: #A05385;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.StatUserController">
    <children>
       <BarChart fx:id="bar" layoutX="281.0" layoutY="83.0" prefHeight="261.0" prefWidth="433.0" style="-fx-title-side: white;">
         <xAxis>
@@ -34,5 +36,10 @@
             <Font name="Verdana Bold" size="12.0" />
          </font>
       </Label>
+      <ImageView fx:id="goBackBtn" fitHeight="50.0" fitWidth="46.0" layoutX="15.0" layoutY="18.0" onMouseClicked="#goBackHandler" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@GoBack.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
