--- a/Attempt2/src/gui/TicketList.fxml
+++ b/Attempt2/src/gui/TicketList.fxml
@@ -9,8 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="700.0" prefWidth="1000.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/19" fx:controller="gui.TicketListController">
+<AnchorPane id="AnchorPane" prefHeight="609.0" prefWidth="802.0" stylesheets="@../assets/css/app.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.TicketListController">
    <children>
       <Text layoutX="36.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Liste de tickets">
          <font>
@@ -22,7 +21,7 @@
             <Font name="Leelawadee UI Semilight" size="15.0" />
          </font>
       </Text>
-      <ScrollPane fx:id="ticketListScrollPane" layoutX="100.0" layoutY="172.0" prefHeight="485.0" prefWidth="800.0">
+      <ScrollPane fx:id="ticketListScrollPane" layoutX="1.0" layoutY="108.0" prefHeight="485.0" prefWidth="800.0">
          <content>
             <GridPane fx:id="ticketGridPane" alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="120.0" prefWidth="784.0" vgap="10.0">
                <columnConstraints>
