--- a/Attempt2/src/gui/StatUser.fxml
+++ b/Attempt2/src/gui/StatUser.fxml
@@ -27,7 +27,7 @@
             <Font name="Verdana Bold" size="12.0" />
          </font>
       </Label>
-      <Label fx:id="userP" layoutX="15.0" layoutY="449.0" prefHeight="50.0" prefWidth="315.0" style="-fx-border-color: white;" text="Label" textFill="WHITE">
+      <Label fx:id="userP" layoutX="15.0" layoutY="449.0" prefHeight="50.0" prefWidth="315.0" style="-fx-border-color: white; -fx-border-width: 5; -fx-border-radius: 10;" text="Label" textFill="WHITE">
          <font>
             <Font name="Verdana Bold" size="12.0" />
          </font></Label>
