--- a/Attempt2/src/gui/Sidebar.fxml
+++ b/Attempt2/src/gui/Sidebar.fxml
@@ -35,5 +35,10 @@
             <Font name="Leelawadee UI" size="17.0" />
          </font>
       </Button>
+      <Button fx:id="locauxBtn" layoutX="1.0" layoutY="362.0" mnemonicParsing="false" onAction="#locauxPage" prefHeight="40.0" prefWidth="223.0" styleClass="menuButton" text="Locaux" textFill="WHITE">
+         <font>
+            <Font name="Leelawadee UI" size="17.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
